--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <link rel="stylesheet" type="text/css">
-        <title>Ricardo Reis Ricci</title>
+        <title>teste de pull</title>
     </head>
 <body>
     <header class="menu-principal">
