--- a/index.html
+++ b/index.html
@@ -10,12 +10,11 @@
             <img src="./img/LOGO.png" />
             <div>
                 <div class="redes-sociais">
-                    
                 </div>
             </div>
         </div>
     </header>
-    <h1> testando comandos de git</h2>
+    <h1 style "color:blue"> testando comandos de git</h2>
 </body>    
 
 </html>
